# aioelectricitymaps

./: .pre-commit-config.yaml  LICENSE  README.md  example.py  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml  renovate.json
.github/workflows/: ci.yml  codeql.yml  labels.yml  linting.yml  lock.yml  release-drafter.yml  release.yml  stale.yml  tests.yml  typing.yml
aioelectricitymaps/: __init__.py  const.py  decorators.py  electricitymaps.py  exceptions.py  marshmallow.py  models.py  request.py
aioelectricitymaps/models/: __init__.py  carbon_intensity.py  home_assistant.py  power_breakdown.py  zone.py
tests/: __init__.py  conftest.py  ruff.toml  test_electricitymaps.py
tests/__snapshots__/: test_electricitymaps.ambr
tests/fixtures/: carbon_intensity_history.json  latest_carbon_intensity.json  latest_power_breakdown.json  no-data-response.json  power_breakdown_history.json  response.json  unknown-response.json  zones.json
