[tool.poetry]
name = "aioelectricitymaps"
version = "0.1.6"
description = "Async Python 3 wrapper for Electricity maps"
authors = ["Jan-Philipp Benecke <jan-philipp@bnck.me>"]
repository = "https://github.com/jpbede/aioelectricitymaps"
license = "MIT License"
readme = "README.md"
packages = [
  { include = "aioelectricitymaps" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
aiohttp = ">=3.8.0"
dataclasses-json = ">=0.6.0"

[tool.poetry.group.dev.dependencies]
codespell = "2.2.6"
covdefaults = "2.3.0"
coverage = {version = "7.4.0", extras = ["toml"]}
pylint = "3.0.3"
pytest = "^7.4.2"
pytest-asyncio = "^0.23.0"
pytest-cov = "4.1.0"
pre-commit = ">=2.21,<4.0"
pre-commit-hooks = "4.5.0"
mypy = "^1.4.1"
ruff = "^0.1.0"
aresponses = "^3.0.0"
syrupy = "4.6.0"
yamllint = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

select = [
    "C",  # complexity
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

ignore = [
  "E501"
]
